2016-03-30 Fixed issue with droppable gaps in Text module
2016-03-24 Added new module Variable Storage
2016-03-21 Fixed scrolling and text wrapping on iOS in Paragraph module
2016-03-18 Added displaying current date in Print Report module
2016-03-18 Fixed issue with class after changing page in Table module
2016-03-18 Fixed issue with variables in Math module
2016-03-18 Added isAllOK command to Writing Calculation module
2016-03-17 Added labels for showing documentation in editor
2016-03-16 Added show and hide methods in Magic Box module
2016-03-16 Added mode on and off to keyboard navigation
2016-03-15 Fixed displaying background in Memo Game module
2016-03-15 Fixed reseting axis values position in Plot module
2016-03-14 Fixed issue with reset in Audio module
2016-03-14 Added keyboard navigation
2016-03-10 Secured adding handlers for creating presenters
2016-03-09 Fixed issue with inline styles
2016-03-07 Added loading all dictionaries.
2016-03-04 Fixed zoom in IWB Toolbar module
2016-03-04 Added setting last page as separated page in Navigation Bar module
2016-03-03 Fixed memory leaks in Audio module
2016-03-03 Fixed memory leaks in TextAudio module
2016-03-03 Fixed issue with id selector in Text module
2016-03-01 Fixed memory leaks in Text with draggable gaps, Source List and Show Answers
2016-03-01 Added ignoring inline styles
2016-03-01 Added positioning of values on x and y axis in Plot module
2016-02-24 Fixed displaying ranges after reset in Animated Page Progress module
2016-02-22 Added possibility to define smaller steps in Line Number module
2016-02-17 Added setting first page as cover in Navigation Bar module
2016-02-15 Added reading values only from canvas in LearnPen Report module
2016-02-10 Changed page name in dictionary
2016-02-10 Fixed displaying alert in Advanced Connector module
2016-02-10 Added isAllOK method and event in Text Identification module
2016-02-10 Fixed Check mode and Show Answers mode in Text and Writing Calculations modules