@@ -1,3 +1,4 @@
+2016-04-04 Fixed issue with appearing native keyboard in eKeyboard module on Android
 2016-03-30 Fixed issue with droppable gaps in Text module
 2016-03-24 Added new module Variable Storage
 2016-03-21 Fixed scrolling and text wrapping on iOS in Paragraph module
